# agrade

./: .gitignore  CMakeLists.txt  README.md  agrade-exceptions.hpp  agrade.cpp  agrade.hpp  main.cpp  test.cpp
libagrade/: CMakeLists.txt  agrade.cpp  agrade.hpp
